fix: remove horizontal scroll on Desktop layout

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,6 +3,8 @@
 * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    transition: all 0.5s ;
+    overflow-x: hidden;
 }
 
 body {
